# FlameAssignmentRD

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/flameassignmentrd/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/flameassignmentrd/: Camera2Helper.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/flameassignmentrd/app/: Camera2Helper.kt  MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/flameassignmentrd/gl/: GLRenderer.kt  GLTextureView.kt
app/src/main/java/com/example/flameassignmentrd/jni/: native-lib.cpp  opencv_processor.cpp
app/src/main/jni/: CMakeLists.txt  image_utils.cpp  image_utils.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/web/: index.html  main.js  main.ts  package-lock.json  package.json  tsconfig.json
app/src/test/java/com/example/flameassignmentrd/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
